--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.0",
     "react-scripts": "5.0.1",
